<resources>
    <string name="app_name">ZooApi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="label_zone">台北市立動物園</string>
    <string name="label_detail">園區資料</string>
    <string name="label_plant">植物資料</string>

    <string name="title_name">名稱</string>
    <string name="title_also_known">別名</string>
    <string name="title_brief">簡介</string>
    <string name="title_feature">辨識方式</string>
    <string name="title_function">功能</string>
    <string name="title_update">最後更新日期</string>
</resources>