<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_zone">

    <fragment
        android:id="@+id/nav_zone"
        android:name="com.penchan.zooapi.ui.zone.ZoneFragment"
        android:label="@string/label_zone"
        tools:layout="@layout/fragment_zone" />

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.penchan.zooapi.ui.detail.DetailFragment"
        android:label="@string/label_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/nav_plant"
        android:name="com.penchan.zooapi.ui.plant.PlantFragment"
        android:label="@string/label_plant"
        tools:layout="@layout/fragment_plant" />
</navigation>