<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPlant"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:background="@color/light_blue"
                android:text="@string/title_name"
                android:textAppearance="@style/TextTitle"/>
            <TextView
                android:id="@+id/tvChName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddings"
                android:paddingLeft="@dimen/paddings"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/tvEnName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/paddings"
                android:paddingLeft="@dimen/paddings"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:paddingLeft="@dimen/paddings"
                android:gravity="center_vertical"
                android:background="@color/light_blue"
                android:text="@string/title_also_known"
                android:textAppearance="@style/TextTitle"/>
            <TextView
                android:id="@+id/tvAlsoKnown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:paddingLeft="@dimen/paddings"
                android:gravity="center_vertical"
                android:background="@color/light_blue"
                android:text="@string/title_brief"
                android:textAppearance="@style/TextTitle"/>
            <TextView
                android:id="@+id/tvBrief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:paddingLeft="@dimen/paddings"
                android:gravity="center_vertical"
                android:background="@color/light_blue"
                android:text="@string/title_feature"
                android:textAppearance="@style/TextTitle"/>
            <TextView
                android:id="@+id/tvFeature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:paddingLeft="@dimen/paddings"
                android:gravity="center_vertical"
                android:background="@color/light_blue"
                android:text="@string/title_function"
                android:textAppearance="@style/TextTitle"/>
            <TextView
                android:id="@+id/tvFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:paddingLeft="@dimen/paddings"
                android:gravity="center_vertical"
                android:background="@color/light_blue"
                android:text="@string/title_update"
                android:textAppearance="@style/TextTitle"/>
            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>